--- a/css.css
+++ b/css.css
@@ -248,6 +248,15 @@
             margin: auto auto 10px;
         }
 
+        summary {
+            cursor: pointer;
+            outline: none;
+            color: transparent;
+        }
+
+        details {
+            transition: .10s;
+        }
         @media screen and (min-width: 641px) {
 
         }
