--- a/css.css
+++ b/css.css
@@ -243,7 +243,7 @@
         .sstxt {
             display: block;
             color: #7d9b95;
-            font-size:14px;
+            font-size:90%;
             text-align: center;
             margin: auto auto 10px;
         }
