--- a/css.css
+++ b/css.css
@@ -274,6 +274,13 @@
         details {
             transition: .10s;
         }
+
+        .pict {
+            width:120px;
+            height:120px;
+            object-fit:cover;
+        }
+
         @media screen and (min-width: 641px) {
 
         }
