--- a/css.css
+++ b/css.css
@@ -279,6 +279,7 @@
             width:120px;
             height:120px;
             object-fit:cover;
+            margin: 5px;
         }
 
         @media screen and (min-width: 641px) {
