--- a/css.css
+++ b/css.css
@@ -176,7 +176,7 @@
         .index_h1 {
             font-size: 180%;
             display: block;
-            margin: 20px auto 50px;
+            margin: 40px auto;
             text-align: center;
             color: #313536;
         }
