--- a/css.css
+++ b/css.css
@@ -67,8 +67,7 @@
         }
 
         .system {
-            color: rgb(114, 114, 114);
-            margin-bottom: 10px;
+            color: rgb(255, 255, 255);
         }
 
         .system + .system {
@@ -243,6 +242,7 @@
         }
         a:hover {
             color: #b2d4ce;
+            transition: color 0.5s
         }
           
         .ss {
@@ -284,6 +284,7 @@
          
         .pict:hover {
             filter: brightness(110%) drop-shadow(0px 0px 5px rgba(26, 34, 51, 0.1));
+            transition: all 0.4s;
         }
 
         @media screen and (min-width: 641px) {
