--- a/css.css
+++ b/css.css
@@ -57,9 +57,7 @@ table {
     border-spacing: 0;
 }
 
-.system {
-    color: rgb(255, 255, 255);
-}
+
 
 .system+.system {
     margin-bottom: 15px;
@@ -189,6 +187,10 @@ body {
     justify-content: space-around;
 }
 
+.fail {
+    color: #FF0000;
+}
+
 img {
     max-width: 100%;
     height: auto;
@@ -198,7 +200,7 @@ b {
     font-weight: bold;
 }
 
-.box {
+.box,.system {
     padding: 5px 10px;
     margin: 1.0em auto;
     background: rgba(150, 150, 150, 0.2);
