--- a/css.css
+++ b/css.css
@@ -326,6 +326,12 @@ a:hover {
     transition: color 0.5s
 }
 
+.copyright {
+    font-size: 80%;
+    text-align: center;
+    margin: 80px auto;
+    max-width: 80%;
+}
 .ss {
     line-height: 1.75;
     letter-spacing: -0.5px;
