--- a/css.css
+++ b/css.css
@@ -370,8 +370,9 @@ details {
 }
 
 .pict:hover {
-    filter: brightness(110%) drop-shadow(0px 0px 5px rgba(26, 34, 51, 0.1));
+    filter: brightness(115%) drop-shadow(2px 2px 3px rgba(7, 14, 32, 0.1));
     transition: all 0.4s;
+    transform: translate(0, -5px)
 }
 
 @media screen and (min-width: 641px) {}
